2.0.6
- More refactoring
2.0.5
- Just refactoring things for no reason
2.0.4
- Fix tab editing
- Add some more input validation
2.0.3
- Fix crash in property and column settings view
2.0.2
- Add color picking to general settings
- Fix to allow saving more than once
- Refactor some code
2.0.1
- Add info text on config panel when nothing selected
- Add peer group to admin tab
- Text wrap config error messages
- Right align percent numbers
2.0.0
- Add in game configuration of tabs, columns and properties
- Rearrange configuration a bit
- Break up the script into a few files in a boxhud folder
- Add persistence.lua library for dumping table to save configuration
1.8.1
- Updated for RG build 216 changes
- Switch to use mq.cmd and mq.cmdf
- Updates to some conditions due to type changes
1.8.0
- Add handling for observing TLOs that may not be present on all toons
  Relies on defining dependencies between observed properties. For example:
    If you have the MQ2Monk, MQ2Eskay and MQ2Rogue plugins, which add TLO `CWTN`, and you want to observe `CWTN.Mode`, then it may interfere
    with macros running on toons without a CWTN class plugin loaded, like bards.
    This can be handled by defining the observed property as:
```
     { Name='Me.Class.ShortName' },
     { Name='CWTN.Mode', DependsOnName='Me.Class.ShortName', DependsOnValue='MNK,SHD,ROG' }
```
    This will result in the `CWTN.Mode` property only being observed on monks, shadow knights and rogues.
- Set initial window size if window has default 32x32 size.
- Exit if game state is not INGAME.
- Append character name to window ID so characters can have separate window settings.
- Add strict settings validation to try and make sure data is correct
- Update button command handling a bit for crashes
1.7.3
- Fix for toons being randomly removed from the table while sorting by something other than the default Name column
1.7.2
- Remove debug accidentally left in 1.7.1 which caused an immediate crash
1.7.1