@@ -803,6 +803,8 @@ local function DrawGeneralSettings()
     DrawLabelAndTextValue('Refresh Interval: ', SETTINGS['RefreshInterval'])
     DrawLabelAndTextValue('Stale Data Timeout: ', SETTINGS['StaleDataTimeout'])
     ImGui.Separator()
+    TRANSPARENCY = DrawCheckBox('Transparent Window: ', '##transparency', TRANSPARENCY, 'Check this box to toggle transparency of the window.')
+    ImGui.Separator()
     ImGui.Text('Column Text Colors:')
     SETTINGS['Colors']['Default'] = DrawColorEditor("Default Color", SETTINGS['Colors']['Default'])
     SETTINGS['Colors']['Low'] = DrawColorEditor("Below Threshold", SETTINGS['Colors']['Low'])
